--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "validator": "^13.5.2"
   },
   "devDependencies": {
