--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "validator": "^13.5.2"
+    "validator": "^13.5.2",
+    "ws": "^7.4.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
